sample-azure-ha-yamls/azure-ha-kustomize-deployment.yaml
# Copyright Sonatype, Inc., 2023, All Rights Reserved.
#
# Use this deployment.yaml when using Kustomize.
# Note the following important information:
# replicas is set to 1.
# volumeMounts are specified for the Nexus Repository license, local node's EBS volume, and logback config map for consolidating task logs into one log file. 
# Docker repositories will need additional ports exposed matching your repository connector configuration. See our help documentation at https://help.sonatype.com/repomanager3/nexus-repository-administration/formats/docker-registry/ssl-and-repository-connector-configuration
# The environment variable NEXUS_SEARCH_INDEX_REBUILD_ON_STARTUP will automatically rebuild your Elasticsearch index on pod/node restart.
# The deployment YAML includes three busybox sidecar containers which tails the Nexus Repository logs (request, audit, and task logs) to stdout so that they can be automatically pushed to Azure Monitor. 
# See Kubernetes documentation at https://kubernetes.io/docs/concepts/cluster-administration/logging/ for more information on the sidecar pattern for accessing logs.
#
# Note: This YAML file is just an example and cannot be used as-is. 
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nxrm-deployment-nexus
  namespace: nexus-repo-mgr
  labels:
    app: nxrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      containers:
      - name: nxrm-app
        image: sonatype/nexus3:3.37.0
        securityContext:
          runAsUser: 200
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
   - name: INSTALL4J_ADD_VM_PARAMS
          value: "-Xms2703m -Xmx2703m -XX:MaxDirectMemorySize=2703m -Dnexus.licenseFile=/nxrm-license/nxrm-license.lic \
          -Dnexus.datastore.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require \
          -Dnexus.datastore.nexus.username=${DB_USER}@db_server_name \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
        volumeMounts:
          - mountPath: /nxrm-license
            name: license-volume
          - name: nexusdata
            mountPath: /nexus-data
          - name: logback-tasklogfile-override
            mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
            subPath: logback-tasklogfile-appender-override.xml
      - name: request-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: audit-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: tasks-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data            
      volumes:
      - name: nexusdata
        persistentVolumeClaim:
          claimName: ebs-claim
      - name: license-volume
        configMap:
          name: nxrm-license
      - name: logback-tasklogfile-override
        configMap:
          name: nxrm-logback-tasklogfile-override 
          items:
               - key: logback-tasklogfile-appender-override.xml
                 path: logback-tasklogfile-appender-override.xml
