sample-azure-ha-yamls/azure-ha-kustomize-statefulset.yaml
# Copyright Sonatype, Inc., 2023, All Rights Reserved.
#
# Use this statefulset.yaml when using Kustomize.
#
# Note: This YAML file is just an example and cannot be used as-is. 
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nxrm-nexus-statefulset
  namespace: nxrm
  labels:
    app: nxrm
spec:
  replicas: 2
  serviceName: nxrm-nexus-statefulset-service
  selector:
    matchLabels:
      app: nxrm
  template:
    metadata:
      labels:
        app: nxrm
    spec:
      terminationGracePeriodSeconds: 20
      containers:
      - name: nxrm-app
        image: sonatype/nexus3:3.50.0
        securityContext:
          runAsUser: 200
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
       -  name: DB_PORT
          value: 5432
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: db-password
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: db-user
        - name: DB_HOST
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: db-host
        - name: DB_PORT
          valueFrom:
            secretKeyRef:
              name: db-secret
              key: db-port             
        - name: NEXUS_SECURITY_INITIAL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: nxrm-secret
              key: nxrm-admin-user
   - name: INSTALL4J_ADD_VM_PARAMS
          value: "-Xms2703m -Xmx2703m -Dnexus.licenseFile=/nxrm-license/nxrm-license.lic \
          -Dnexus.datastore.enabled=true -Djava.util.prefs.userRoot=${NEXUS_DATA}/javaprefs \
          -Dnexus.datastore.nexus.jdbcUrl=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}?sslmode=require \
          -Dnexus.datastore.nexus.username=${DB_USER}@db_server_name \
          -Dnexus.datastore.nexus.password=${DB_PASSWORD}"
        volumeMounts:
          - mountPath: /nxrm-license
            name: license-volume
          - name: nexusdata
            mountPath: /nexus-data
          - name: logback-tasklogfile-override
            mountPath: /nexus-data/etc/logback/logback-tasklogfile-appender-override.xml
            subPath: logback-tasklogfile-appender-override.xml
      - name: request-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/request.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: audit-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/audit/audit.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data
      - name: tasks-log
        image: busybox:1.33.1
        args: [/bin/sh, -c, 'tail -n+1 -F /nexus-data/log/tasks/allTasks.log']
        volumeMounts:
          - name: nexusdata
            mountPath: /nexus-data            
      volumes:
      - name: nexusdata
        persistentVolumeClaim:
          claimName: ebs-claim
      - name: license-volume
        configMap:
          name: nxrm-license
      - name: logback-tasklogfile-override
        configMap:
          name: nxrm-logback-tasklogfile-override 
          items:
               - key: logback-tasklogfile-appender-override.xml
                 path: logback-tasklogfile-appender-override.xml
