sample-azure-ha-yamls/azure-ha-docker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nxrm-nexus-docker-service
  namespace: nxrm
  labels:
    app: nxrm
spec:
  type: NodePort
  selector:
    app: nxrm
  ports:
    - name: docker-service
      protocol: TCP
      port: 9090
      targetPort: 8081
