sample-azure-ha-yamls/azure-ha-ingress-for-docker-connector.yaml
# Copyright Sonatype, Inc., 2022, All Rights Reserved.
#
# If you require your clients to access more than one Docker Repository, you must use Nexus Repository Docker subdomain connector or an external load balancer (e.g., NGINX) as a reverse proxy instead of this ingress for Docker YAML.
# For reverse proxy see our help documentation at https://help.sonatype.com/repomanager3/nexus-repository-administration/formats/docker-registry/docker-repository-reverse-proxy-strategies
# For docker sub domain connector, see our help documentation at https://help.sonatype.com/repomanager3/nexus-repository-administration/formats/docker-registry/docker-subdomain-connector
#
# Note: This YAML file is just an example and cannot be used as-is.
# You must fill it out with the appropriate information for your deployment to be able to use it.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: nxrm
  name: nxrm-docker-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: example.com #comment out if not using https for load balancer
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nxrm-docker-service
                port:
                  number: 9090
